<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:minWidth="900dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_button"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.04" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_button_title"
            style="@style/TextInputEditRadius"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintWidth_percent="0.8">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_button_title"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_button_desc"
            style="@style/TextInputEditRadius"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_button_title"
            app:layout_constraintWidth_percent="0.8">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_button_desc" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_button_step_sum"
            style="@style/TextInputEditRadius"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintHorizontal_bias="0.32"
            app:layout_constraintStart_toStartOf="@+id/ed_button_desc"
            app:layout_constraintTop_toBottomOf="@id/ed_button_desc">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_button_step_sum"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_button_default_step"
            style="@style/TextInputEditRadius"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="@+id/ed_button_desc"
            app:layout_constraintHorizontal_bias="0.32"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            app:layout_constraintTop_toTopOf="@+id/ed_button_step_sum">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_button_default_step"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_button_width"
            style="@style/TextInputEditRadius"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintHorizontal_bias="0.32"
            app:layout_constraintStart_toStartOf="@+id/ed_button_desc"
            app:layout_constraintTop_toBottomOf="@id/ed_button_step_sum">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_button_width"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_button_height"
            style="@style/TextInputEditRadius"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="@+id/ed_button_desc"
            app:layout_constraintHorizontal_bias="0.32"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            app:layout_constraintTop_toTopOf="@+id/ed_button_width">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_button_height"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/rg_switch_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/rv_insert_action"
            app:layout_constraintStart_toStartOf="@+id/rv_insert_action"
            app:layout_constraintTop_toBottomOf="@+id/rv_insert_action">

            <RadioButton
                android:id="@+id/rb_loop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/loop"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rb_step"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/step"
                android:textSize="16sp" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/cb_add_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/choose_button_add_info"
            app:layout_constraintStart_toStartOf="@+id/rg_switch_mode"
            app:layout_constraintTop_toBottomOf="@+id/rg_switch_mode" />

        <Button
            android:id="@+id/btn_insert_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey_light"
            android:text="@string/cancel"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_add_info"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintWidth_percent="0.3" />

        <Button
            android:id="@+id/btn_insert_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black_light"
            android:text="@string/confirm"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            app:layout_constraintTop_toTopOf="@+id/btn_insert_cancel"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent="0.3" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_insert_action"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/ed_button_height"
            app:layout_constraintStart_toStartOf="@+id/ed_button_width"
            app:layout_constraintTop_toBottomOf="@+id/ed_button_width"
            tools:itemCount="5"
            tools:listitem="@layout/item_action_button" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>