<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:minWidth="400dp"
        android:minHeight="300dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_profile_title"
            style="@style/TextInputEditRadius"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15"
            app:layout_constraintWidth_percent="0.9">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_profile_title" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_profile_desc"
            style="@style/TextInputEditRadius"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_profile_title"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintWidth_percent="0.9">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_profile_desc" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/btn_profile_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey_light"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/ed_profile_desc"
            app:layout_constraintTop_toBottomOf="@+id/ed_profile_desc"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintWidth_percent="0.35" />

        <Button
            android:id="@+id/btn_profile_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black_light"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/ed_profile_desc"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/ed_profile_desc"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintWidth_percent="0.35" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>