<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:elevation="2dp">

        <ImageView
            android:id="@+id/ib_insert_ab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/add_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/vector_add_button" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_keyboard_set"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/ib_action_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:scaleX="0.75"
                android:scaleY="0.75"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_clear_24" />

            <TextView
                android:id="@+id/tv_insert_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_step_placeholder"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_action_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxWidth="80dp"
                android:singleLine="true"
                android:text="@string/action_desc_placeholder"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_insert_step"
                app:layout_constraintStart_toStartOf="@+id/tv_insert_step"
                app:layout_constraintTop_toBottomOf="@+id/tv_insert_step" />

            <TextView
                android:id="@+id/tv_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="80dp"
                android:singleLine="true"
                android:text="@string/action_placeholder"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv_insert_step"
                app:layout_constraintStart_toStartOf="@+id/tv_insert_step"
                app:layout_constraintTop_toBottomOf="@+id/tv_action_desc" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>