<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:minWidth="350dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_page_title"
            style="@style/TextInputEditRadius"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.32"
            app:layout_constraintWidth_percent="0.8">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_page_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_page_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey_light"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline9"
            app:layout_constraintStart_toStartOf="@+id/ed_page_title"
            app:layout_constraintTop_toBottomOf="@+id/ed_page_title"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintWidth_percent="0.2" />

        <Button
            android:id="@+id/btn_page_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black_light"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/ed_page_title"
            app:layout_constraintStart_toStartOf="@+id/guideline9"
            app:layout_constraintTop_toBottomOf="@+id/ed_page_title"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintWidth_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>